--- a/roles/cni/templates/calico.yaml.j2
+++ b/roles/cni/templates/calico.yaml.j2
@@ -3559,7 +3559,7 @@ spec:
   # We recommend using Typha if you have more than 50 nodes. Above 100 nodes it is essential
   # (when using the Kubernetes datastore). Use one replica for every 100-200 nodes. In
   # production, we recommend running at least 3 replicas to reduce the impact of rolling upgrade.
-  replicas: "{{ typha_count }}"
+  replicas: {{ typha_count | int }}
   revisionHistoryLimit: 2
   selector:
     matchLabels:
